@@ -19,31 +19,9 @@
 
 package org.matsim.contrib.drt.analysis;
 
-import static java.util.stream.Collectors.toList;
-
-import java.awt.BasicStroke;
-import java.awt.Color;
-import java.io.BufferedWriter;
-import java.io.FileOutputStream;
-import java.io.IOException;
-import java.text.DecimalFormat;
-import java.text.DecimalFormatSymbols;
-import java.text.ParseException;
-import java.text.SimpleDateFormat;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Comparator;
-import java.util.HashMap;
-import java.util.LinkedList;
-import java.util.List;
-import java.util.Locale;
-import java.util.Map;
-import java.util.Optional;
-import java.util.TreeMap;
-import java.util.function.Function;
-import java.util.stream.Collectors;
-
+import com.google.common.base.Preconditions;
+import com.google.common.collect.HashMultiset;
+import com.google.common.collect.Multiset;
 import org.apache.commons.lang3.tuple.Pair;
 import org.apache.commons.math3.stat.descriptive.DescriptiveStatistics;
 import org.apache.logging.log4j.LogManager;
@@ -59,7 +37,6 @@ import org.jfree.data.time.TimeSeriesCollection;
 import org.jfree.data.xy.XYSeries;
 import org.matsim.api.core.v01.Coord;
 import org.matsim.api.core.v01.Id;
-import org.matsim.api.core.v01.events.PersonDepartureEvent;
 import org.matsim.api.core.v01.events.PersonMoneyEvent;
 import org.matsim.api.core.v01.network.Link;
 import org.matsim.api.core.v01.network.Network;
@@ -67,15 +44,18 @@ import org.matsim.api.core.v01.population.Person;
 import org.matsim.contrib.common.timeprofile.TimeProfileCharts;
 import org.matsim.contrib.common.util.ChartSaveUtils;
 import org.matsim.contrib.drt.analysis.DrtEventSequenceCollector.EventSequence;
+import org.matsim.contrib.drt.optimizer.constraints.DrtOptimizationConstraintsSetImpl;
+import org.matsim.contrib.drt.optimizer.constraints.DrtOptimizationConstraintsSet;
 import org.matsim.contrib.drt.passenger.events.DrtRequestSubmittedEvent;
 import org.matsim.contrib.drt.run.DrtConfigGroup;
 import org.matsim.contrib.drt.schedule.DrtStayTask;
+import org.matsim.contrib.dvrp.analysis.VehicleOccupancyProfileCalculator;
 import org.matsim.contrib.dvrp.fleet.DvrpVehicle;
-import org.matsim.contrib.dvrp.fleet.DvrpVehicleSpecification;
 import org.matsim.contrib.dvrp.fleet.FleetSpecification;
+import org.matsim.contrib.dvrp.load.DvrpLoadType;
 import org.matsim.contrib.dvrp.optimizer.Request;
 import org.matsim.contrib.dvrp.passenger.PassengerPickedUpEvent;
-import org.matsim.contrib.dvrp.analysis.VehicleOccupancyProfileCalculator;
+import org.matsim.contrib.dvrp.passenger.PassengerRequestRejectedEvent;
 import org.matsim.core.config.Config;
 import org.matsim.core.config.groups.QSimConfigGroup;
 import org.matsim.core.controler.MatsimServices;
@@ -87,7 +67,20 @@ import org.matsim.core.utils.io.IOUtils;
 import org.matsim.core.utils.misc.Time;
 import org.matsim.vehicles.Vehicle;
 
-import com.google.common.base.Preconditions;
+import java.awt.*;
+import java.io.BufferedWriter;
+import java.io.FileOutputStream;
+import java.io.IOException;
+import java.text.DecimalFormat;
+import java.text.DecimalFormatSymbols;
+import java.text.ParseException;
+import java.text.SimpleDateFormat;
+import java.util.List;
+import java.util.*;
+import java.util.function.Function;
+import java.util.stream.Collectors;
+
+import static java.util.stream.Collectors.toList;
 
 /**
  * @author jbischoff
@@ -112,7 +105,7 @@ public class DrtAnalysisControlerListener implements IterationEndsListener, Shut
 
 	DrtAnalysisControlerListener(Config config, DrtConfigGroup drtCfg, FleetSpecification fleet, DrtVehicleDistanceStats drtVehicleStats,
 			MatsimServices matsimServices, Network network, DrtEventSequenceCollector drtEventSequenceCollector,
-			VehicleOccupancyProfileCalculator vehicleOccupancyProfileCalculator) {
+			VehicleOccupancyProfileCalculator vehicleOccupancyProfileCalculator, DvrpLoadType loadType) {
 		this.drtVehicleStats = drtVehicleStats;
 		this.matsimServices = matsimServices;
 		this.network = network;
@@ -120,8 +113,8 @@ public class DrtAnalysisControlerListener implements IterationEndsListener, Shut
 		this.vehicleOccupancyProfileCalculator = vehicleOccupancyProfileCalculator;
 		this.drtCfg = drtCfg;
 		this.qSimCfg = config.qsim();
-		runId = Optional.ofNullable(config.controler().getRunId()).orElse(notAvailableString);
-		maxcap = findMaxVehicleCapacity(fleet);
+		runId = Optional.ofNullable(config.controller().getRunId()).orElse(notAvailableString);
+		maxcap = VehicleOccupancyProfileCalculator.findMaxVehicleCapacity(fleet, loadType);
 
 		format.setDecimalFormatSymbols(new DecimalFormatSymbols(Locale.US));
 		format.setMinimumIntegerDigits(1);
@@ -131,39 +124,49 @@ public class DrtAnalysisControlerListener implements IterationEndsListener, Shut
 		this.delimiter = config.global().getDefaultDelimiter();
 	}
 
-	private record DrtLeg(Id<Request> request, double departureTime, Id<Person> person, Id<DvrpVehicle> vehicle, Id<Link> fromLinkId, Coord fromCoord,
+	private record DrtLeg(Id<Request> request, double submissionTime, double readyForPickupTime, double pickupTime, Id<Person> person,
+						  Id<DvrpVehicle> vehicle, Id<Link> fromLinkId, Coord fromCoord,
 						  Id<Link> toLinkId, Coord toCoord, double waitTime, double unsharedDistanceEstimate_m, double unsharedTimeEstimate_m,
-						  double arrivalTime, double fare, double latestDepartureTime, double latestArrivalTime) {
+						  double arrivalTime, double fare, double earliestDepartureTime, double latestDepartureTime, double latestArrivalTime) {
 	}
 
-	private static DrtLeg newDrtLeg(EventSequence sequence, Function<Id<Link>, ? extends Link> linkProvider) {
+	private static List<DrtLeg> newDrtLegs(EventSequence sequence, Function<Id<Link>, ? extends Link> linkProvider) {
 		Preconditions.checkArgument(sequence.isCompleted());
+		List<DrtLeg> legs = new ArrayList<>();
 		DrtRequestSubmittedEvent submittedEvent = sequence.getSubmitted();
-		PersonDepartureEvent departureEvent = sequence.getDeparture().get();
-		PassengerPickedUpEvent pickedUpEvent = sequence.getPickedUp().get();
+
+		Map<Id<Person>, EventSequence.PersonEvents> personEvents = sequence.getPersonEvents();
+
 		var request = submittedEvent.getRequestId();
-		var departureTime = departureEvent.getTime();
-		var person = submittedEvent.getPersonId();
-		var vehicle = pickedUpEvent.getVehicleId();
+		var submissionTime = submittedEvent.getTime();
 		var fromLinkId = submittedEvent.getFromLinkId();
 		var fromCoord = linkProvider.apply(fromLinkId).getToNode().getCoord();
 		var toLinkId = submittedEvent.getToLinkId();
 		var toCoord = linkProvider.apply(toLinkId).getToNode().getCoord();
-		var waitTime = pickedUpEvent.getTime() - departureEvent.getTime();
 		var unsharedDistanceEstimate_m = submittedEvent.getUnsharedRideDistance();
 		var unsharedTimeEstimate_m = submittedEvent.getUnsharedRideTime();
-		var arrivalTime = sequence.getDroppedOff().get().getTime();
 		// PersonMoneyEvent has negative amount because the agent's money is reduced -> for the operator that is a positive amount
 		var fare = sequence.getDrtFares().stream().mapToDouble(PersonMoneyEvent::getAmount).sum();
+		var earliestDepartureTime = sequence.getSubmitted().getEarliestDepartureTime();
 		var latestDepartureTime = sequence.getSubmitted().getLatestPickupTime();
 		var latestArrivalTime = sequence.getSubmitted().getLatestDropoffTime();
-		return new DrtLeg(request, departureTime, person, vehicle, fromLinkId, fromCoord, toLinkId, toCoord, waitTime, unsharedDistanceEstimate_m,
-				unsharedTimeEstimate_m, arrivalTime, fare, latestDepartureTime, latestArrivalTime);
+
+		for (Id<Person> person : submittedEvent.getPersonIds()) {
+			var pickupReadyTime = personEvents.get(person).getDeparture().get().getTime();
+			PassengerPickedUpEvent pickedUp = personEvents.get(person).getPickedUp().get();
+			var vehicle = pickedUp.getVehicleId();
+			var waitTime = pickedUp.getTime() - earliestDepartureTime;
+			var arrivalTime = personEvents.get(person).getDroppedOff().get().getTime();
+			legs.add(new DrtLeg(request, submissionTime, pickupReadyTime, pickedUp.getTime(), person, vehicle, fromLinkId, fromCoord, toLinkId, toCoord, waitTime, unsharedDistanceEstimate_m,
+					unsharedTimeEstimate_m, arrivalTime, fare, earliestDepartureTime, latestDepartureTime, latestArrivalTime));
+		}
+		return legs;
 	}
 
 	@Override
 	public void notifyIterationEnds(IterationEndsEvent event) {
-		boolean createGraphs = event.getServices().getConfig().controler().isCreateGraphs();
+		int createGraphsInterval = event.getServices().getConfig().controller().getCreateGraphsInterval();
+		boolean createGraphs = createGraphsInterval >0 && event.getIteration() % createGraphsInterval == 0;
 
 		writeAndPlotWaitTimeEstimateComparison(drtEventSequenceCollector.getPerformedRequestSequences().values(),
 				filename(event, "waitTimeComparison", ".png"), filename(event, "waitTimeComparison", ".csv"), createGraphs);
@@ -172,26 +175,37 @@ public class DrtAnalysisControlerListener implements IterationEndsListener, Shut
 				.values()
 				.stream()
 				.filter(EventSequence::isCompleted)
-				.map(sequence -> newDrtLeg(sequence, network.getLinks()::get))
-				.sorted(Comparator.comparing(leg -> leg.departureTime))
+				.map(sequence -> newDrtLegs(sequence, network.getLinks()::get))
+				.flatMap(Collection::stream)
+				.sorted(Comparator.comparing(leg -> leg.submissionTime))
+				.collect(toList());
+
+		List<PassengerRequestRejectedEvent> rejectionEvents = drtEventSequenceCollector.getRejectedRequestSequences()
+				.values()
+				.stream()
+				.map(eventSequence -> eventSequence.getRejected().get())
+				.sorted(Comparator.comparing(rejectionEvent -> rejectionEvent.getTime()))
 				.collect(toList());
 
 		collection2Text(drtEventSequenceCollector.getRejectedRequestSequences().values(), filename(event, "drt_rejections", ".csv"),
-				String.join(delimiter, "time", "personId", "fromLinkId", "toLinkId", "fromX", "fromY", "toX", "toY"), seq -> {
+				String.join(delimiter, "time", "personIds", "requestId", "fromLinkId", "toLinkId", "fromX", "fromY", "toX", "toY", "cause"), seq -> {
 					DrtRequestSubmittedEvent submission = seq.getSubmitted();
 					Coord fromCoord = network.getLinks().get(submission.getFromLinkId()).getToNode().getCoord();
 					Coord toCoord = network.getLinks().get(submission.getToLinkId()).getToNode().getCoord();
+					PassengerRequestRejectedEvent rejection = seq.getRejected().get();
 					return String.join(delimiter, submission.getTime() + "",//
-							submission.getPersonId() + "",//
+							submission.getPersonIds().stream().map(Object::toString).collect(Collectors.joining("-")) + "",//
+							submission.getRequestId() + "",//
 							submission.getFromLinkId() + "",//
 							submission.getToLinkId() + "",//
 							fromCoord.getX() + "",//
 							fromCoord.getY() + "",//
 							toCoord.getX() + "",//
-							toCoord.getY() + "");
+							toCoord.getY() + "",//
+							rejection.getCause());
 				});
 
-		double rejectionRate = (double)drtEventSequenceCollector.getRejectedRequestSequences().size()
+		double rejectionRate = (double) drtEventSequenceCollector.getRejectedRequestSequences().size()
 				/ drtEventSequenceCollector.getRequestSubmissions().size();
 		String legsSummarize = summarizeLegs(legs, drtVehicleStats.getTravelDistances(), drtEventSequenceCollector.getDrtFarePersonMoneyEvents(),
 				delimiter);
@@ -211,9 +225,12 @@ public class DrtAnalysisControlerListener implements IterationEndsListener, Shut
 				+ format.format(minCountAndShareIdleVehiclesOverDay.minCountIdleVehiclesOverDay);
 		String occStats = summarizeDetailedOccupancyStats(drtVehicleStats.getVehicleStates(), delimiter, maxcap);
 		writeIterationVehicleStats(vehStats, occStats, event.getIteration());
-		if (drtCfg.plotDetailedCustomerStats) {
-			String header = String.join(delimiter, "departureTime",//
+		if (drtCfg.isPlotDetailedCustomerStats()) {
+			String header = String.join(delimiter, //
+					"submissionTime", //
+					"readyForPickupTime",//
 					"personId",//
+					"requestId",//
 					"vehicleId",//
 					"fromLinkId",//
 					"fromX",//
@@ -227,12 +244,15 @@ public class DrtAnalysisControlerListener implements IterationEndsListener, Shut
 					"travelDistance_m",//
 					"directTravelDistance_m",//
 					"fareForLeg", //
+					"earliestDepartureTime",
 					"latestDepartureTime", //
 					"latestArrivalTime");
 
 			collection2Text(legs, filename(event, "drt_legs", ".csv"), header, leg -> String.join(delimiter,//
-					(Double)leg.departureTime + "",//
+					(Double)leg.submissionTime + "",//
+					(Double)leg.readyForPickupTime + "",//
 					leg.person + "",//
+					leg.request + "",//
 					leg.vehicle + "",//
 					leg.fromLinkId + "",//
 					format.format(leg.fromCoord.getX()),//
@@ -242,20 +262,22 @@ public class DrtAnalysisControlerListener implements IterationEndsListener, Shut
 					format.format(leg.toCoord.getY()),//
 					leg.waitTime + "",//
 					leg.arrivalTime + "",//
-					(leg.arrivalTime - leg.departureTime - leg.waitTime) + "",//
+					(leg.arrivalTime - leg.pickupTime) + "",//
 					format.format(drtVehicleStats.getTravelDistances().get(leg.request)),//
 					format.format(leg.unsharedDistanceEstimate_m),//
 					format.format(leg.fare), //
+					format.format(leg.earliestDepartureTime), //
 					format.format(leg.latestDepartureTime), //
 					format.format(leg.latestArrivalTime)));
 		}
 		writeVehicleDistances(drtVehicleStats.getVehicleStates(), filename(event, "vehicleDistanceStats", ".csv"), delimiter);
 		analyseDetours(network, legs, drtVehicleStats.getTravelDistances(), drtCfg, filename(event, "drt_detours"), createGraphs, delimiter);
 		analyseWaitTimes(filename(event, "waitStats"), legs, 1800, createGraphs, delimiter);
+		analyseRejections(filename(event, "drt_rejections_perTimeBin"), rejectionEvents, 1800, createGraphs, delimiter);
 		analyseConstraints(filename(event, "constraints"), legs, createGraphs);
 
 		double endTime = qSimCfg.getEndTime()
-				.orElseGet(() -> legs.isEmpty() ? qSimCfg.getStartTime().orElse(0) : legs.get(legs.size() - 1).departureTime);
+				.orElseGet(() -> legs.isEmpty() ? qSimCfg.getStartTime().orElse(0) : legs.get(legs.size() - 1).readyForPickupTime);
 
 		analyzeBoardingsAndDeboardings(legs, delimiter, qSimCfg.getStartTime().orElse(0), endTime, 3600, filename(event, "drt_boardings", ".csv"),
 				filename(event, "drt_alightments", ".csv"), network);
@@ -315,7 +337,7 @@ public class DrtAnalysisControlerListener implements IterationEndsListener, Shut
 		try (var bw = getAppendingBufferedWriter("drt_customer_stats", ".csv")) {
 			if (!headerWritten) {
 				headerWritten = true;
-				bw.write(line("runId", "iteration", "rides", "wait_average", "wait_max", "wait_p95", "wait_p75", "wait_median",
+				bw.write(line("runId", "iteration", "rides", "rides_pax", "groupSize_mean", "wait_average", "wait_max", "wait_p95", "wait_p75", "wait_median",
 						"percentage_WT_below_10", "percentage_WT_below_15", "inVehicleTravelTime_mean", "distance_m_mean", "directDistance_m_mean",
 						"totalTravelTime_mean", "fareAllReferences_mean", "rejections", "rejectionRate"));
 			}
@@ -333,7 +355,7 @@ public class DrtAnalysisControlerListener implements IterationEndsListener, Shut
 	private void writeIterationVehicleStats(String summarizeVehicles, String vehOcc, int it) {
 		try (var bw = getAppendingBufferedWriter("drt_vehicle_stats", ".csv")) {
 			if (!vheaderWritten) {
-				bw.write(line("runId", "iteration", "vehicles", "totalDistance", "totalEmptyDistance", "emptyRatio", "totalPassengerDistanceTraveled",
+				bw.write(line("runId", "iteration", "vehicles", "totalServiceDuration", "totalDistance", "totalEmptyDistance", "emptyRatio", "totalPassengerDistanceTraveled",
 						"averageDrivenDistance", "averageEmptyDistance", "averagePassengerDistanceTraveled", "d_p/d_t", "l_det",
 						"minShareIdleVehicles", "minCountIdleVehicles"));
 			}
@@ -345,7 +367,7 @@ public class DrtAnalysisControlerListener implements IterationEndsListener, Shut
 		try (var bw = getAppendingBufferedWriter("drt_detailed_distanceStats", ".csv")) {
 			if (!vheaderWritten) {
 				vheaderWritten = true;
-				bw.write("runId;iteration");
+				bw.write("runId" + delimiter + "iteration");
 				for (int i = 0; i <= maxcap; i++) {
 					bw.write(delimiter + i + " pax distance_m");
 				}
@@ -365,17 +387,24 @@ public class DrtAnalysisControlerListener implements IterationEndsListener, Shut
 
 			bw.append(line("RequestId", "actualWaitTime", "estimatedWaitTime", "deviate"));
 			for (EventSequence seq : performedRequestEventSequences) {
-				if (seq.getPickedUp().isPresent()) {
-					double actualWaitTime = seq.getPickedUp().get().getTime() - seq.getDeparture().get().getTime();
-					double estimatedWaitTime = seq.getScheduled().get().getPickupTime() - seq.getDeparture().get().getTime();
-					bw.append(line(seq.getSubmitted().getRequestId(), actualWaitTime, estimatedWaitTime, actualWaitTime - estimatedWaitTime));
-					times.add(actualWaitTime, estimatedWaitTime);
+				List<Id<Person>> personIds = seq.getSubmitted().getPersonIds();
+				for (Id<Person> person : personIds) {
+					if(seq.getPersonEvents().containsKey(person)) {
+						double earliestDepartureTime = seq.getSubmitted().getEarliestDepartureTime();
+						EventSequence.PersonEvents personEvents = seq.getPersonEvents().get(person);
+						if(personEvents.getPickedUp().isPresent() && personEvents.getDeparture().isPresent()) {
+							double actualWaitTime = personEvents.getPickedUp().get().getTime() - earliestDepartureTime;
+							double estimatedWaitTime = seq.getScheduled().get().getPickupTime() - earliestDepartureTime;
+							bw.append(line(seq.getSubmitted().getRequestId(), actualWaitTime, estimatedWaitTime, actualWaitTime - estimatedWaitTime));
+							times.add(actualWaitTime, estimatedWaitTime);
+						}
+					}
 				}
 			}
 
 			if (createChart) {
 				final JFreeChart chart2 = DensityScatterPlots.createPlot("Wait times", "Actual wait time [s]", "Initially planned wait time [s]",
-						times, Pair.of(0., drtCfg.maxWaitTime));
+						times, Pair.of(0., drtCfg.addOrGetDrtOptimizationConstraintsParams().addOrGetDefaultDrtOptimizationConstraintsSet().getMaxWaitTime()));
 				//			xAxis.setLowerBound(0);
 				//			yAxis.setLowerBound(0);
 				ChartUtils.writeChartAsPNG(new FileOutputStream(plotFileName), chart2, 1500, 1500);
@@ -399,6 +428,7 @@ public class DrtAnalysisControlerListener implements IterationEndsListener, Shut
 		dumpOutput(event.getIteration(), "waitTimeComparison", ".png");
 		dumpOutput(event.getIteration(), "waitTimeComparison", ".csv");
 		dumpOutput(event.getIteration(), "drt_rejections", ".csv");
+		dumpOutput(event.getIteration(), "drt_rejections_perTimeBin", ".csv");
 		dumpOutput(event.getIteration(), "drt_legs", ".csv");
 		dumpOutput(event.getIteration(), "vehicleDistanceStats", ".csv");
 		dumpOutput(event.getIteration(), "drt_detours", ".csv");
@@ -434,14 +464,14 @@ public class DrtAnalysisControlerListener implements IterationEndsListener, Shut
 	private static Map<Double, List<DrtLeg>> splitLegsIntoBins(Collection<DrtLeg> legs, int startTime, int endTime, int binSize_s) {
 		LinkedList<DrtLeg> allLegs = new LinkedList<>(legs);
 		DrtLeg currentLeg = allLegs.pollFirst();
-		if (currentLeg.departureTime > endTime) {
+		if (currentLeg.readyForPickupTime > endTime) {
 			LogManager.getLogger(DrtAnalysisControlerListener.class).error("wrong end / start Times for analysis");
 		}
 		Map<Double, List<DrtLeg>> splitLegs = new TreeMap<>();
 		for (int time = startTime; time < endTime; time = time + binSize_s) {
 			List<DrtLeg> currentList = new ArrayList<>();
 			splitLegs.put((double)time, currentList);
-			while (currentLeg.departureTime < time + binSize_s) {
+			while (currentLeg.readyForPickupTime < time + binSize_s) {
 				currentList.add(currentLeg);
 				currentLeg = allLegs.pollFirst();
 				if (currentLeg == null) {
@@ -451,6 +481,33 @@ public class DrtAnalysisControlerListener implements IterationEndsListener, Shut
 		}
 
 		return splitLegs;
+	}
+
+	private static Map<Double, List<PassengerRequestRejectedEvent>> splitEventsIntoBins(List<PassengerRequestRejectedEvent> rejectionEvents, int binSize_s) {
+		Map<Double, List<PassengerRequestRejectedEvent>> rejections = new TreeMap<>();
+
+		int startTime = ((int)(rejectionEvents.get(0).getTime() / binSize_s)) * binSize_s;
+		int endTime = ((int)(rejectionEvents.get(rejectionEvents.size() - 1).getTime() / binSize_s) + 1) * binSize_s;
+
+		for (int time = startTime; time < endTime; time = time + binSize_s) {
+
+			// rejection list in this timebin
+			List<PassengerRequestRejectedEvent> rejectionList = new ArrayList<>();
+
+			//Iterate through each rejection
+			for (PassengerRequestRejectedEvent rejectedEvent : rejectionEvents){
+				double rejectionTime = rejectedEvent.getTime();
+				if (rejectionTime > endTime || rejectionTime < startTime) {
+					LogManager.getLogger(DrtAnalysisControlerListener.class).error("wrong end / start Times for analysis");
+				}
+
+				if (rejectionTime > time && rejectionTime < time + binSize_s) {
+					rejectionList.add(rejectedEvent);
+				}
+			}
+			rejections.put((double)time, rejectionList);
+		}
+		return rejections;
 	}
 
 	private static void analyzeBoardingsAndDeboardings(List<DrtLeg> legs, String delimiter, double startTime, double endTime, double timeBinSize,
@@ -464,7 +521,7 @@ public class DrtAnalysisControlerListener implements IterationEndsListener, Shut
 
 		for (DrtLeg leg : legs) {
 			int[] board = boardings.getOrDefault(leg.fromLinkId, new int[bins]);
-			int startTimeBin = (int)((leg.departureTime + leg.waitTime - startTime) / timeBinSize);
+			int startTimeBin = (int)((leg.readyForPickupTime + leg.waitTime - startTime) / timeBinSize);
 			if (startTimeBin < bins) {
 				board[startTimeBin]++;
 				boardings.put(leg.fromLinkId, board);
@@ -518,18 +575,23 @@ public class DrtAnalysisControlerListener implements IterationEndsListener, Shut
 		format.setMaximumFractionDigits(2);
 		format.setGroupingUsed(false);
 
+		Multiset<Id<Request>> servedRides = HashMultiset.create();
+
 		for (DrtLeg leg : legs) {
 			if (leg.toLinkId == null) {
 				continue;
 			}
+			servedRides.add(leg.request);
 			waitStats.addValue(leg.waitTime);
-			rideStats.addValue(leg.arrivalTime - leg.departureTime - leg.waitTime);
+			rideStats.addValue(leg.arrivalTime - leg.pickupTime);
 			distanceStats.addValue(travelDistances.get(leg.request));
 			directDistanceStats.addValue(leg.unsharedDistanceEstimate_m);
-			traveltimes.addValue(leg.arrivalTime - leg.departureTime);
+			traveltimes.addValue(leg.arrivalTime - leg.readyForPickupTime);
 		}
 
-		return String.join(delimiter, format.format(waitStats.getValues().length) + "",//
+		return String.join(delimiter, format.format(servedRides.entrySet().size()) + "",//
+				format.format(servedRides.size()) + "",//
+				format.format(((double) servedRides.size()) / servedRides.entrySet().size()) + "",//
 				format.format(waitStats.getMean()) + "",//
 				format.format(waitStats.getMax()) + "",//
 				format.format(waitStats.getPercentile(95)) + "",//
@@ -578,11 +640,11 @@ public class DrtAnalysisControlerListener implements IterationEndsListener, Shut
 			}
 
 			double travelDistance = travelDistances.get(leg.request);
-			double travelTime = leg.arrivalTime - leg.departureTime;
+			double travelTime = leg.arrivalTime - leg.readyForPickupTime;
 			if (createGraphs) {
 				distances.add(travelDistance, leg.unsharedDistanceEstimate_m);
 				travelTimes.add(travelTime, leg.unsharedTimeEstimate_m);
-				rideTimes.add(leg.arrivalTime - leg.departureTime - leg.waitTime, leg.unsharedTimeEstimate_m);
+				rideTimes.add(leg.arrivalTime - leg.pickupTime, leg.unsharedTimeEstimate_m);
 			}
 
 			double distanceDetour = travelDistance / leg.unsharedDistanceEstimate_m;
@@ -605,21 +667,28 @@ public class DrtAnalysisControlerListener implements IterationEndsListener, Shut
 					distances);
 			ChartSaveUtils.saveAsPNG(chart, fileName + "_distancePlot", 1500, 1500);
 
+			DrtOptimizationConstraintsSet constraintsSet = drtCfg.addOrGetDrtOptimizationConstraintsParams().addOrGetDefaultDrtOptimizationConstraintsSet();
+			Pair<Double, Double> lineCoeffs = null;
+			if(constraintsSet instanceof DrtOptimizationConstraintsSetImpl defaultConstraintsSet) {
+                lineCoeffs = Pair.of(defaultConstraintsSet.getMaxTravelTimeAlpha(),
+						defaultConstraintsSet.getMaxTravelTimeBeta());
+            }
 			final JFreeChart chart2 = DensityScatterPlots.createPlot("Travel Times", "travel time [s]", "unshared ride time [s]", travelTimes,
-					Pair.of(drtCfg.maxTravelTimeAlpha, drtCfg.maxTravelTimeBeta));
+					lineCoeffs);
 			ChartSaveUtils.saveAsPNG(chart2, fileName + "_travelTimePlot", 1500, 1500);
 
 			final JFreeChart chart3 = DensityScatterPlots.createPlot("Ride Times", "ride time [s]", "unshared ride time [s]", rideTimes,
-					Pair.of(drtCfg.maxTravelTimeAlpha, drtCfg.maxTravelTimeBeta));
+					lineCoeffs);
 			ChartSaveUtils.saveAsPNG(chart3, fileName + "_rideTimePlot", 1500, 1500);
 		}
 	}
 
 	private static void analyseWaitTimes(String fileName, List<DrtLeg> legs, int binsize_s, boolean createGraphs, String delimiter) {
-		if (legs.size() == 0)
+		if (legs.isEmpty()) {
 			return;
-		int startTime = ((int)(legs.get(0).departureTime / binsize_s)) * binsize_s;
-		int endTime = ((int)(legs.get(legs.size() - 1).departureTime / binsize_s) + binsize_s) * binsize_s;
+		}
+		int startTime = ((int)(legs.getFirst().readyForPickupTime / binsize_s)) * binsize_s;
+		int endTime = ((int)(legs.getLast().readyForPickupTime / binsize_s) + binsize_s) * binsize_s;
 		Map<Double, List<DrtLeg>> splitLegs = splitLegsIntoBins(legs, startTime, endTime, binsize_s);
 
 		DecimalFormat format = new DecimalFormat();
@@ -706,6 +775,55 @@ public class DrtAnalysisControlerListener implements IterationEndsListener, Shut
 			e.printStackTrace();
 		}
 
+	}
+
+	private static void analyseRejections(String fileName, List<PassengerRequestRejectedEvent> rejectionEvents, int binsize_s, boolean createGraphs, String delimiter) {
+		if (rejectionEvents.size() == 0)
+			return;
+
+		Map<Double, List<PassengerRequestRejectedEvent>> splitEvents = splitEventsIntoBins(rejectionEvents, binsize_s);
+
+		DecimalFormat format = new DecimalFormat();
+		format.setDecimalFormatSymbols(new DecimalFormatSymbols(Locale.US));
+		format.setMinimumIntegerDigits(1);
+		format.setMaximumFractionDigits(2);
+		format.setGroupingUsed(false);
+
+		SimpleDateFormat sdf2 = new SimpleDateFormat("HH:mm:ss");
+
+		BufferedWriter bw = IOUtils.getBufferedWriter(fileName + ".csv");
+		TimeSeriesCollection dataset = new TimeSeriesCollection();
+		TimeSeries rejections = new TimeSeries("number of rejections");
+
+		try {
+			bw.write(String.join(delimiter, "timebin", "rejections"));
+
+			for(Map.Entry<Double, List<PassengerRequestRejectedEvent>> e : splitEvents.entrySet()){
+				int drt_numOfRejection = 0;
+				if (!e.getValue().isEmpty()) {
+					drt_numOfRejection = e.getValue().size();
+				}
+
+				Minute h = new Minute(sdf2.parse(Time.writeTime(e.getKey())));
+
+				rejections.addOrUpdate(h, Double.valueOf(drt_numOfRejection));
+				bw.newLine();
+				bw.write(String.join(delimiter, Time.writeTime(e.getKey()) + "",//
+					format.format(drt_numOfRejection) +""));
+			}
+
+			bw.flush();
+			bw.close();
+			if (createGraphs) {
+				dataset.addSeries(rejections);
+				JFreeChart chart = chartProfile(splitEvents.size(), dataset, "Number of rejections", "Number");
+				ChartSaveUtils.saveAsPNG(chart, fileName, 1500, 1000);
+			}
+
+		} catch (IOException | ParseException e) {
+
+			e.printStackTrace();
+		}
 	}
 
 	private static JFreeChart chartProfile(int length, TimeSeriesCollection dataset, String descriptor, String yax) {
@@ -796,12 +914,15 @@ public class DrtAnalysisControlerListener implements IterationEndsListener, Shut
 		format.setMaximumFractionDigits(2);
 		format.setGroupingUsed(false);
 
+		DescriptiveStatistics totalServiceDuration = new DescriptiveStatistics();
 		DescriptiveStatistics driven = new DescriptiveStatistics();
 		DescriptiveStatistics passengerTraveledDistance = new DescriptiveStatistics();
 		DescriptiveStatistics occupied = new DescriptiveStatistics();
 		DescriptiveStatistics empty = new DescriptiveStatistics();
 
+
 		for (DrtVehicleDistanceStats.VehicleState state : vehicleDistances.values()) {
+			totalServiceDuration.addValue(state.serviceDuration);
 			driven.addValue(state.totalDistance);
 			passengerTraveledDistance.addValue(state.totalPassengerTraveledDistance);
 			occupied.addValue(state.totalOccupiedDistance);
@@ -809,6 +930,7 @@ public class DrtAnalysisControlerListener implements IterationEndsListener, Shut
 		}
 		double d_p_d_t = passengerTraveledDistance.getSum() / driven.getSum();
 		return String.join(del, vehicleDistances.size() + "",//
+				format.format(totalServiceDuration.getSum()) + "",//
 				format.format(driven.getSum()) + "",//
 				format.format(empty.getSum()) + "",//
 				format.format(empty.getSum() / driven.getSum()) + "",//
@@ -817,14 +939,6 @@ public class DrtAnalysisControlerListener implements IterationEndsListener, Shut
 				format.format(empty.getMean()) + "",//
 				format.format(passengerTraveledDistance.getMean()) + "",//
 				format.format(d_p_d_t) + "");
-	}
-
-	/**
-	 * @param fleet
-	 * @return
-	 */
-	static int findMaxVehicleCapacity(FleetSpecification fleet) {
-		return fleet.getVehicleSpecifications().values().stream().mapToInt(DvrpVehicleSpecification::getCapacity).max().getAsInt();
 	}
 
 	private static String summarizeDetailedOccupancyStats(Map<Id<Vehicle>, DrtVehicleDistanceStats.VehicleState> vehicleDistances, String del,
@@ -873,12 +987,12 @@ public class DrtAnalysisControlerListener implements IterationEndsListener, Shut
 
 		for (DrtLeg leg : legs) {
 			double waitingTime = leg.waitTime;
-			double maximumWaitingTime = leg.latestDepartureTime - leg.departureTime;
+			double maximumWaitingTime = leg.latestDepartureTime - leg.earliestDepartureTime;
 			waitingTimes.add(maximumWaitingTime, waitingTime);
 
 			if (leg.toLinkId != null) {
-				double travelTime = leg.arrivalTime - leg.departureTime;
-				double maximumTravelTime = leg.latestArrivalTime - leg.departureTime;
+				double travelTime = leg.arrivalTime - leg.readyForPickupTime;
+				double maximumTravelTime = leg.latestArrivalTime - leg.readyForPickupTime;
 				travelTimes.add(maximumTravelTime, travelTime);
 			}
 		}
