@@ -29,30 +29,24 @@ import com.google.inject.Inject;
 public final class GreedyUmlaufBuilderImpl implements UmlaufBuilder {
 	private static final Logger log = LogManager.getLogger( GreedyUmlaufBuilderImpl.class );
 
-	public class UmlaufKey {
-		
-		private final Id<TransitLine> lineId;
+	public static class UmlaufKey {
+
 		private final Id<TransitStopFacility> stopFacilityId;
 		private final double lastArrivalTime;
 		private final Id<Umlauf> umlaufId;
-		
+
 
 		Id<Umlauf> getUmlaufId() {
 			return umlaufId;
 		}
 
-		UmlaufKey( Id<TransitLine> lineId, Id<TransitStopFacility> stopFacilityId, double lastArrivalTime, Id<Umlauf> umlaufId ) {
+		UmlaufKey( Id<TransitStopFacility> stopFacilityId, double lastArrivalTime, Id<Umlauf> umlaufId ) {
 			super();
-			this.lineId = lineId;
 			this.stopFacilityId = stopFacilityId;
 			this.lastArrivalTime = lastArrivalTime;
 			this.umlaufId = umlaufId;
 		}
 
-		public Id<TransitLine> getLineId() {
-			return lineId;
-		}
-		
 		public Id<TransitStopFacility> getStopFacility() {
 			return stopFacilityId;
 		}
@@ -60,25 +54,25 @@ public final class GreedyUmlaufBuilderImpl implements UmlaufBuilder {
 		double getLastArrivalTime() {
 			return lastArrivalTime;
 		}
-		
+
 		@Override
 		public String toString() {
-			return stopFacilityId + " at " + lastArrivalTime + "(" + getLineId() + ")";
+			return stopFacilityId + " at " + lastArrivalTime + "(" + getUmlaufId() + ")";
 		}
-		
+
 
 	}
 
-	private static final Comparator<UmlaufStueck> departureTimeComparator = new Comparator<UmlaufStueck>() {
+	private static final Comparator<UmlaufStueck> departureTimeComparator = new Comparator<>() {
 
 		@Override
 		public int compare(UmlaufStueck o1, UmlaufStueck o2) {
 			return Double.compare(o1.getDeparture().getDepartureTime(), o2.getDeparture().getDepartureTime());
 		}
-		
+
 	};
 
-	private static final Comparator<UmlaufKey> umlaufKeyComparator = new Comparator<UmlaufKey>() {
+	private static final Comparator<UmlaufKey> umlaufKeyComparator = new Comparator<>() {
 
 		@Override
 		public int compare(UmlaufKey o1, UmlaufKey o2) {
@@ -86,22 +80,17 @@ public final class GreedyUmlaufBuilderImpl implements UmlaufBuilder {
 			if (c != 0) {
 				return c;
 			} else {
-				int cc = o1.getLineId().compareTo(o2.getLineId()); 
+				int cc = o1.getUmlaufId().compareTo(o2.getUmlaufId());
 				if (cc != 0) {
 					return cc;
 				} else {
-					int ccc = Double.compare(o1.getLastArrivalTime(), o2.getLastArrivalTime());
-					if (ccc != 0) {
-						return ccc;
-					} else {
-						return o1.getUmlaufId().compareTo(o2.getUmlaufId());
-					}
+					return Double.compare(o1.getLastArrivalTime(), o2.getLastArrivalTime());
 				}
 			}
 		}
-		
+
 	};
-	
+
 	private final Collection<TransitLine> transitLines;
 	private final SortedMap<UmlaufKey,Umlauf> umlaeufe = new TreeMap<UmlaufKey,Umlauf>(umlaufKeyComparator);
 	private ArrayList<UmlaufStueck> umlaufStuecke;
@@ -115,14 +104,14 @@ public final class GreedyUmlaufBuilderImpl implements UmlaufBuilder {
 
 	@Inject
 	GreedyUmlaufBuilderImpl( Scenario scenario ) {
-		interpolator = new UmlaufInterpolator( scenario.getNetwork(), scenario.getConfig().planCalcScore() );
+		interpolator = new UmlaufInterpolator( scenario.getNetwork(), scenario.getConfig().scoring() );
 		this.transitLines = scenario.getTransitSchedule().getTransitLines().values();
 	}
-	
+
 	private static boolean canBuild() {
 		return true;
 	}
-	
+
 	@Override
 	public Collection<Umlauf> build() {
 		if (!canBuild()) {
@@ -142,12 +131,12 @@ public final class GreedyUmlaufBuilderImpl implements UmlaufBuilder {
 		}
 		return umlaeufe.values();
 	}
-	
+
 	private static double getLastArrivalTime( Umlauf umlauf ) {
 		TransitRouteStop previousStop = getLastStop(umlauf);
 		double previousDepartureTime = getLastDeparture(umlauf).getDepartureTime();
 		double arrivalOffset = previousStop.getArrivalOffset().seconds();
-		double previousArrivalTime = previousDepartureTime + arrivalOffset;			
+		double previousArrivalTime = previousDepartureTime + arrivalOffset;
 		return previousArrivalTime;
 	}
 
@@ -162,12 +151,11 @@ public final class GreedyUmlaufBuilderImpl implements UmlaufBuilder {
 
 	private static TransitRouteStop getLastStop( UmlaufStueckI umlaufStueck ) {
 		List<TransitRouteStop> stops = umlaufStueck.getRoute().getStops();
-		TransitRouteStop previousStop = stops.get(stops.size() - 1);
-		return previousStop;
+		return stops.getLast();
 	}
 
 	private static UmlaufStueckI getLastUmlaufStueck( Umlauf umlauf ) {
-		return umlauf.getUmlaufStuecke().get(umlauf.getUmlaufStuecke().size() - 1);
+		return umlauf.getUmlaufStuecke().getLast();
 	}
 
 	private static String getLastStopPostAreaId( Umlauf umlauf ) {
@@ -175,14 +163,13 @@ public final class GreedyUmlaufBuilderImpl implements UmlaufBuilder {
 	}
 
 	private UmlaufKey getKey(Umlauf umlauf) {
-		return new UmlaufKey(umlauf.getLineId(), Id.create(getLastStopPostAreaId(umlauf), TransitStopFacility.class), getLastArrivalTime(umlauf), umlauf.getId());
+		return new UmlaufKey(Id.create(getLastStopPostAreaId(umlauf), TransitStopFacility.class), getLastArrivalTime(umlauf), umlauf.getId());
 	}
 
 	private Umlauf findFittingUmlauf(UmlaufStueck umlaufStueck) {
-		String firstStopPostAreaId = umlaufStueck.getRoute().getStops().get(0).getStopFacility().getStopAreaId().toString();
-		Id<TransitLine> lineId = umlaufStueck.getLine().getId();
-		UmlaufKey earliestAtPoint = new UmlaufKey(lineId, Id.create(firstStopPostAreaId, TransitStopFacility.class), 0.0, Id.create(0, Umlauf.class));
-		UmlaufKey latestAtPoint = new UmlaufKey(lineId, Id.create(firstStopPostAreaId, TransitStopFacility.class), umlaufStueck.getDeparture().getDepartureTime(), Id.create(0, Umlauf.class));
+		String firstStopPostAreaId = umlaufStueck.getRoute().getStops().getFirst().getStopFacility().getStopAreaId().toString();
+		UmlaufKey earliestAtPoint = new UmlaufKey(Id.create(firstStopPostAreaId, TransitStopFacility.class), 0.0, Id.create(0, Umlauf.class));
+		UmlaufKey latestAtPoint = new UmlaufKey(Id.create(firstStopPostAreaId, TransitStopFacility.class), umlaufStueck.getDeparture().getDepartureTime(), Id.create(0, Umlauf.class));
 		log.info("Looking between " + earliestAtPoint + " and " + latestAtPoint);
 		SortedMap<UmlaufKey,Umlauf> fittingUmlaeufe = umlaeufe.subMap(earliestAtPoint, latestAtPoint);
 		Umlauf fittingUmlauf;
@@ -196,21 +183,19 @@ public final class GreedyUmlaufBuilderImpl implements UmlaufBuilder {
 	}
 
 	private void createUmlaufStuecke() {
-		int i=0;
-		this.umlaufStuecke = new ArrayList<UmlaufStueck>();
+		this.umlaufStuecke = new ArrayList<>();
 		for (TransitLine line : transitLines) {
 			for (TransitRoute route : line.getRoutes().values()) {
 				for (Departure departure : route.getDepartures().values()) {
 					UmlaufStueck umlaufStueck = new UmlaufStueck(line, route, departure);
 					umlaufStuecke.add(umlaufStueck);
-					++i;
 				}
 			}
 		}
-		Collections.sort(this.umlaufStuecke, departureTimeComparator);
+		this.umlaufStuecke.sort(departureTimeComparator);
 	}
 
-	
-	
+
+
 
 }
